Fri Aug 16 09:17:00 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_small_rshift): Specify the higher BDIGIT instead of
	  sign bit.
	  (big_shift3): Follow the above change.

Fri Aug 16 02:20:39 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_toom3): Reduce a branch.

Fri Aug 16 02:14:09 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* process.c (rb_clock_gettime): add CLOCK_MONOTONIC support on OS X.
	  http://developer.apple.com/library/mac/qa/qa1398/_index.html
	  [Feature #8658]

Fri Aug 16 01:37:43 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_single): Use shift when y is a power of two.

Fri Aug 16 01:09:33 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_restoring): Use bigdivrem_single if non-topmost
	  BDIGITs of y are zero.

Fri Aug 16 00:33:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big2str1): Truncate topmost zeros of x.

Fri Aug 16 00:00:57 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_divmod): Simplify an expression.

Thu Aug 15 23:26:12 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bigdivrem_normal): Remove a local variable.

Thu Aug 15 23:08:32 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big2str_karatsuba): Use bigdivrem_restoring directly to
	  reduce working buffer and memory copy.
	  (rb_big2str1): Allocate working buffer for big2str_karatsuba here.

Thu Aug 15 20:51:29 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c, internal.h (rb_io_flush_raw): new function to select calling
	  fsync() (on Windows).

	* io.c (rb_io_flush_raw): use above function.

	* file.c (rb_file_truncate): use above function.

	* test/ruby/test_file.rb (TestFile#test_truncate_size): test for
	  above changes.

Thu Aug 15 18:39:31 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (clock_gettime): improve precision when freq is less
	  than and nearly equals 10**9.

Thu Aug 15 17:43:15 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_lazy_sweep): remove heap_increment() here because heap_inc